Retrieve and rank java code